# openspp-odoo-addons-repo-template

./: CONTRIBUTING.md  README.md  copier.yml  pyproject.toml
src/: .pre-commit-config.yaml.jinja  .pylintrc-mandatory.jinja  .pylintrc.jinja  README.md.jinja  {% if odoo_version > 12 %}.eslintrc.yml{% endif %}.jinja  {% if use_ruff %}.ruff.toml{% endif%}.jinja
src/.github/workflows/: cla.yml  pre-commit.yml.jinja  {% if ci == 'GitHub' %}test.yml{% endif %}.jinja
tests/: test_copy.py
version-specific/mqt-compat/: .flake8
