[tool.poetry]
name = "openspp-odoo-addons-repo-template"
version = "0.0.0" # Just a placeholder; the real version is the git tag
description = "Template for OpenSPP addon repos"
authors = ["OpenSPP"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.0"

[tool.poetry.dev-dependencies]
copier = ">=7"
pytest = "*"
pre-commit = "*"
pytest-xdist = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
